--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-6" id="img-bg"></div>
-    <div class="col-md-6 mt-5 mb-5">
+    <div class="col-md-7" id="img-bg"></div>
+    <div class="col-md-5 mt-5 mb-5">
       <div class="row d-flex justify-content-center">
-        <div class="col-md-10">
+        <div class="col-md-9">
           <h1 class="text-center">Cadastro</h1>
 
           <div class="form-group">
@@ -68,7 +68,11 @@
             <button type="submit" class="btn btn-outline-danger mr-4">
               Confirmar
             </button>
-            <button type="submit" class="btn btn-outline-danger">
+            <button
+              type="submit"
+              class="btn btn-outline-danger"
+              routerLink="/entrar"
+            >
               Cancelar
             </button>
           </div>
