--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<!---
-<app-menu></app-menu>
-<app-entrar></app-entrar>
-<app-rodape></app-rodape>
--->
-<app-cadastrar></app-cadastrar>
+<router-outlet></router-outlet>
