--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
   <div class="row d-flex align-items-center">
-    <div class="col-md-6">
+    <div class="col-md-4">
       <div class="row d-flex justify-content-center">
-        <div class="col-md-6">
+        <div class="col-md-8">
           <h1 class="text-center mb-3">Entrar</h1>
           <div class="form-group">
             <label for="usuario">Usuário</label>
@@ -31,13 +31,16 @@
           <hr class="mt-5 mb-5" />
 
           <p class="text-center">
-            Ainda não tem uma conta?<a class="text-secondary" href="">
+            Ainda não tem uma conta?<a
+              class="text-secondary"
+              routerLink="/cadastrar"
+            >
               Cadastre-se</a
             >
           </p>
         </div>
       </div>
     </div>
-    <div class="col-md-6" id="img-bg"></div>
+    <div class="col-md-8" id="img-bg"></div>
   </div>
 </div>
