--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -9,6 +9,7 @@
           <div class="form-group">
             <label for="nome">Nome</label>
             <input
+              [(ngModel)]="user.nome"
               class="form-control"
               type="text"
               name="nome"
@@ -19,6 +20,7 @@
           <div class="form-group">
             <label for="usuario">Usuário</label>
             <input
+              [(ngModel)]="user.usuario"
               class="form-control"
               type="text"
               name="usuario"
@@ -29,6 +31,7 @@
           <div class="form-group">
             <label for="foto">Foto</label>
             <input
+              [(ngModel)]="user.foto"
               class="form-control"
               type="text"
               name="foto"
@@ -39,6 +42,7 @@
           <div class="form-group">
             <label for="senha">Senha</label>
             <input
+              (input)="confirmSenha($event)"
               class="form-control"
               type="password"
               name="senha"
@@ -49,6 +53,7 @@
           <div class="form-group">
             <label for="confirmSenha">Confirmar Senha</label>
             <input
+              [(ngModel)]="user.senha"
               class="form-control"
               type="password"
               name="confirmSsenha"
@@ -58,14 +63,23 @@
           </div>
           <div class="form-group">
             <label for="tipo">Tipo de Usuário</label>
-            <select class="form-control" name="tipo" id="tipo">
+            <select
+              class="form-control"
+              name="tipo"
+              id="tipo"
+              (change)="tipoUser($event)"
+            >
               <option>Selecione um tipo de usuário:</option>
               <option value="normal">Normal</option>
               <option value="adm">Administrador</option>
             </select>
           </div>
           <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-outline-danger mr-4">
+            <button
+              type="submit"
+              class="btn btn-outline-danger mr-4"
+              (click)="cadastrar()"
+            >
               Confirmar
             </button>
             <button
