--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -7,6 +7,7 @@
           <div class="form-group">
             <label for="usuario">Usuário</label>
             <input
+              [(ngModel)]="userLogin.usuario"
               class="form-control"
               type="text"
               name="usuario"
@@ -17,6 +18,7 @@
           <div class="form-group">
             <label for="senha">Senha</label>
             <input
+              [(ngModel)]="userLogin.senha"
               class="form-control"
               type="password"
               name="senha"
@@ -25,7 +27,13 @@
             />
           </div>
           <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-outline-danger">Entrar</button>
+            <button
+              type="submit"
+              class="btn btn-outline-danger"
+              (click)="entre()"
+            >
+              Entrar
+            </button>
           </div>
 
           <hr class="mt-5 mb-5" />
