--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+<nav class="navbar navbar-expand-lg navbar-light bg">
   <button
     class="navbar-toggler"
     type="button"
@@ -12,23 +12,23 @@
   </button>
 
   <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-    <ul class="navbar-nav mr-auto d-flex align-items-center">
+    <ul class="navbar-nav mr-5 d-flex align-items-center">
       <li class="nav-item active">
         <img
-          src="https://avatars.githubusercontent.com/u/70760075?v=4"
+          src="{{ foto }}"
           alt="imagem do user"
-          width="50px"
-          height="50px"
+          width="60px"
+          height="60px"
           class="img-fluid rounded-circle"
         />
       </li>
       <li class="nav-item pl-4">
-        <p class="m-0 font-weight-bold text-white ftsz">Nome do usuário</p>
+        <p class="m-0 font-weight-bold ftsz">Olá, {{ nome }}</p>
       </li>
       <li class="nav-item pl-2 mb-3">
         <a href="">
           <i
-            class="fa fa-pencil-square-o text-white icsz"
+            class="fa fa-pencil-square-o icsz text-dark"
             aria-hidden="true"
           ></i>
         </a>
@@ -36,8 +36,8 @@
     </ul>
     <ul class="navbar-nav ml-auto d-flex align-items-center">
       <li class="nav-item pl-4">
-        <a class="m-0 pr-3 font-weight-bold text-white ftsz"
-          >Sair <i class="fa fa-sign-out" aria-hidden="true"></i
+        <a (click)="logout()" class="m-0 pr-3 font-weight-bold ftsz text-dark"
+          >Sair <i class="fa fa-sign-out text-dark" aria-hidden="true"></i
         ></a>
       </li>
     </ul>
