--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -1,3 +1,7 @@
+.bg {
+  background-color: white;
+}
+
 ul.social {
   list-style: none;
   padding: 0;
@@ -6,22 +10,21 @@ ul.social {
 ul.social li {
   display: inline;
   margin: 0;
-  padding: 3px;
 }
 .fa {
   font-size: 25pt;
   padding: 5px;
-  color: white;
+  color: black;
 }
 .fa-facebook-square:hover {
-  color: darkslategray;
+  color: gray;
 }
 .fa-instagram:hover {
-  color: darkslategray;
+  color: gray;
 }
 .fa-github-square:hover {
-  color: darkslategray;
+  color: gray;
 }
 .fa-linkedin-square:hover {
-  color: darkslategray;
+  color: gray;
 }
