--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,8 +1,9 @@
-<footer class="page-footer font-small bg-dark pt-4">
+<footer class="page-footer font-small bg pt-4">
   <div class="container">
+    <hr />
     <div class="row">
       <div class="col-md-12 d-flex justify-content-center">
-        <h4 class="text-white">Siga-nos nas redes sociais</h4>
+        <h4>Siga nas redes sociais</h4>
       </div>
     </div>
 
@@ -49,11 +50,15 @@
       </div>
     </div>
   </div>
-  <div class="footer-copyright bg-dark text-center py-3">
-    <span class="text-light"
+
+  <div class="container"><hr /></div>
+
+  <div class="footer-copyright bg text-center mb-3">
+    <span
       >@2021 Copyright:
+
       <a
-        class="text-light"
+        class="text-secondary"
         target="_blank"
         href="https://brazil.generation.org/"
         >brasil.generation.org</a
