--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+html {
+  scroll-behavior: smooth;
+}
+.ft-30 {
+  font-size: 53pt;
+}
+.ft-15 {
+  font-size: 17pt;
+}
