--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -12,6 +12,7 @@
         <div class="col-md-3">
           <div class="form-group">
             <input
+              [(ngModel)]="tema.descricao"
               type="text"
               class="form-control"
               id="descricao"
@@ -19,7 +20,9 @@
             />
           </div>
           <div class="d-flex justify-content-center">
-            <button class="btn btn-outline-light">Cadastrar</button>
+            <button class="btn btn-outline-light" (click)="cadastrar()">
+              Cadastrar
+            </button>
           </div>
         </div>
       </div>
@@ -44,26 +47,13 @@
             <th scope="col">#</th>
             <th scope="col">Primeiro</th>
             <th scope="col">Último</th>
-            <th scope="col">Nickname</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
+          <tr *ngFor="let tema of listaTemas">
+            <th>{{ tema.id }}</th>
+            <th>{{ tema.descricao }}</th>
             <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
           </tr>
         </tbody>
       </table>
