--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -5,13 +5,13 @@
       <div class="row d-flex justify-content-center">
         <div class="col-md-6">
           <h1 class="ft-30 text-white text-center ml-2">Seja bem vindo(a)!</h1>
-          <h5 class="ft-15 text-white text-center">
-            - Deixe aqui suas histpórias e pensamentos -
+          <h5 class="ft-15 text-white text-center mt-3 mb-4">
+            - Deixe aqui suas histórias e pensamentos -
           </h5>
         </div>
       </div>
       <div class="row d-flex justify-content-center">
-        <div class="col-md-6">
+        <div class="col-md-6 ml-2">
           <button
             class="btn btn-outline-light mr-4"
             data-toggle="modal"
