--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -53,9 +53,19 @@
           <tr *ngFor="let tema of listaTemas">
             <th>{{ tema.id }}</th>
             <th>{{ tema.descricao }}</th>
-            <td class="d-flex justify content end">
-              <button class="btn btn-outline-danger mr-3">Editar</button>
-              <button class="btn btn-outline-danger">Apagar</button>
+            <td class="d-flex justify-content-end">
+              <button
+                class="btn btn-outline-danger mr-3"
+                [routerLink]="['/tema-edit', tema.id]"
+              >
+                Editar
+              </button>
+              <button
+                class="btn btn-outline-danger"
+                [routerLink]="['/tema-delete', tema.id]"
+              >
+                Apagar
+              </button>
             </td>
           </tr>
         </tbody>
