--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -35,7 +35,7 @@
               class="form-control"
               type="text"
               name="foto"
-              id="usuario"
+              id="foto"
               placeholder="Sua foto"
             />
           </div>
