--- a/src/app/delete/postagem-delete/postagem-delete.component.html
+++ b/src/app/delete/postagem-delete/postagem-delete.component.html
@@ -1,1 +1,45 @@
-<p>postagem-delete works!</p>
+<div class="container mt-5 mb-5">
+  <div class="row">
+    <div class="col-md-12">
+      <h1 class="text-center text-secondary">Apagar postagem</h1>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <h4 class="text-center text-secondary">
+        Você tem certeza de que deseja apagar essa postagem?
+      </h4>
+    </div>
+  </div>
+
+  <div class="row d-flex justify-content-center mt-3">
+    <div class="col-md-4">
+      <div class="card text-center">
+        <div class="card-body">
+          <h5 class="card-title">{{ postagem.titulo }}</h5>
+          <small class="text-muted">{{ postagem.tema.descricao }}</small>
+
+          <p class="card-text mt-3">
+            {{ postagem.texto }}
+          </p>
+          <p class="card-text">
+            <small class="text-muted"
+              >{{ postagem.data | date: "dd/ MM / yyyy" }} às
+              {{ postagem.data | date: "HH:mm" }}</small
+            >
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12 d-flex justify-content-center">
+      <button class="btn btn-outline-danger mr-4" (click)="apagar()">
+        Sim
+      </button>
+      <button class="btn btn-outline-danger" routerLink="/inicio">Não</button>
+    </div>
+  </div>
+</div>
