--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -26,7 +26,7 @@
         <p class="m-0 font-weight-bold ftsz">Olá, {{ nome }}</p>
       </li>
       <li class="nav-item pl-2 mb-3">
-        <a href="">
+        <a [routerLink]="['/user-edit', id]">
           <i
             class="fa fa-pencil-square-o icsz text-dark"
             aria-hidden="true"
